<resources>
    <string name="app_name">MyMessageApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grup_olustur">Grup Olustur</string>
    <string name="gruba_uye_ekle">Gruba Uye Ekle</string>
    <string name="grup_olusturr">Grup Olustur</string>
    <string name="mesaj_olu_tur">Mesaj Oluştur</string>
    <string name="mesaj_gonder">Mesaj Gonder</string>
    <string name="cikis_yap">Çıkış Yap</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="mesaj_olu_tur_ve_g_nder">Mesaj Oluştur ve Gönder</string>
    <string name="_201913709055_berkay_yakup_sevim">201913709055- Berkay Yakup Sevim</string>
</resources>