<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_grupolustur"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/grup_olusturr" />

        <item
            android:id="@+id/nav_grubaUyeEkle"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/gruba_uye_ekle" />

        <item
            android:id="@+id/nav_mesajOlustur"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/mesaj_olu_tur" />

        <item
            android:id="@+id/nav_mesajGonder"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/mesaj_gonder" />

        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/cikis_yap" />

    </group>
</menu>